[gd_scene format=3 uid="uid://lobby_mp_12345"]

[ext_resource type="Script" path="res://scripts/multiplayer/lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GHOSTS IN THE FLUX"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Multiplayer Lobby"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ServerNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server Name:"

[node name="ServerNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Ghost Server"

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "IP Address (for joining):"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "7777"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN GAME"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "‚Üê BACK TO MENU"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
text = "Enter server details and Host or Join"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
text = "START GAME"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "DISCONNECT"
